// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutation results should write results to cache according to errorPolicy 1`] = `Object {}`;

exports[`mutation results should write results to cache according to errorPolicy 2`] = `
Object {
  "Person:{\\"name\\":\\"Jenn Creighton\\"}": Object {
    "__typename": "Person",
    "name": "Jenn Creighton",
  },
}
`;

exports[`mutation results should write results to cache according to errorPolicy 3`] = `
Object {
  "Person:{\\"name\\":\\"Ellen Shapiro\\"}": Object {
    "__typename": "Person",
    "name": "Ellen Shapiro",
  },
  "Person:{\\"name\\":\\"Jenn Creighton\\"}": Object {
    "__typename": "Person",
    "name": "Jenn Creighton",
  },
}
`;
